--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
             <div id="slider" class="nivoSlider center-mobile">
                 <img src="images/slider/roofer1.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" />
                 <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="" title="Re-Roof" />
-                <img src="images/slider/walle.jpg" data-thumb="images/walle.jpg" alt="Insured &amp; Licensed" data-transition="slideInLeft" />
-                <img src="images/slider/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
+                <!--<img src="images/slider/walle.jpg" data-thumb="images/walle.jpg" alt="Insured &amp; Licensed" data-transition="slideInLeft" />
+                <img src="images/slider/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />-->
             </div>
-            <div id="htmlcaption" class="nivo-html-caption">
+            <!--<div id="htmlcaption" class="nivo-html-caption">
                 <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-            </div>
+            </div>-->
         </div>
 
           </div><!-- row : ends -->
