Fixing images for services section

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="row add-top add-bottom">
             <article class="span12">
               <h1 class="main-heading col-white">Our Services</h1>
-              <div><p class="sub-heading col-white"><span class="major">premium</span> the best in class services we can offer</p></div>
+              <div><p class="sub-heading col-white"><span class="major">Serving</span> the Delaware Valley since 1978.</p></div>
             </article>
           </div><!-- row : ends -->
 
