fixing some contact info

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Della Vecchio Construction - Wind and Storm Damage Experts</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="eleg premium theme">
-    <meta name="author" content="Jean P Johnson for Designova">
+    <meta name="description" content="DellaVecchio Construction &amp; Restoration">
+    <meta name="author" content="DellaVecchio Construction &amp; Restoration">
 
 
     <!-- Le styles -->
@@ -56,7 +56,7 @@
   <ul class="mobile-header visible-phone visible-tablet">
     <li>
       <br />
-        <img class="mob-logo" alt="Della Vecchio Construction" class="visible-phone visible-tablet" title="Della Vecchio Construction" src="images/DCLOGOSM.png" />
+        <img class="mob-logo" alt="DellaVecchio Construction &amp; Restoration" class="visible-phone visible-tablet" title="DellaVecchio Construction &amp; Restoration" src="images/DCLOGOSM.png" />
         <br />
         <!-- Start Dropmenu for mobile -->
         <select class="dropmenu" name="dropmenu" onChange="moveTo(this.value)">
@@ -77,7 +77,7 @@
 			<a class="align-left" title="home" href="#intro">home</a>
       <!--<a class="align-left to-first-page" title="portfolio" href="#portfolio">works</a>-->
       <a class="align-left" title="about" href="#about">about</a>
-			<a id="logo" href="#"><img alt="Della Vecchio Construction" title="Della Vecchio Construction" src="images/DCLOGOSM.png"/></a>
+			<a id="logo" href="#"><img alt="DellaVecchio Construction &amp; Restoration" title="DellaVecchio Construction &amp; Restoration" src="images/DCLOGOSM.png"/></a>
       <a class="align-right" title="services" href="#services">services</a>
       <!--<a class="align-right" title="features" href="#features">features</a>-->
 			<a class="align-right" title="contact" href="#contact">contact</a>
@@ -139,8 +139,8 @@
               <img alt="Della Vecchio Roofing" title="eleg" src="images/about/about01.png" />
             </article>
             <article class="span8 col-white center-mobile">
-              <h3>About Della Vecchio Construction</h3>
-              <p>Della Vechio Construction is a family owned and operated business that has been serving the Delaware Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
+              <h3>About DellaVecchio Construction &amp; Restoration</h3>
+              <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Delaware Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
             </article>
           </div><!-- row : ends -->
 
@@ -160,7 +160,7 @@
             <article class="span9 col-white center-mobile">
               <h3>Amazing Service and Worksmanship!</h3>
               <div class="about-quote">
-              <p>After Hurricane Sandy damaged our roof we had leaks everywhere. Della Vechio Construction took my information and did all the leg work with the insurance agency. The speed and quality of work was incredible. Within a few weeks our home had a brand new roof and gutters at minimal out-of-pocket expenses.</p>
+              <p>After Hurricane Sandy damaged our roof we had leaks everywhere. DellaVecchio Construction &amp; Restoration took my information and did all the leg work with the insurance agency. The speed and quality of work was incredible. Within a few weeks our home had a brand new roof and gutters at minimal out-of-pocket expenses.</p>
               </div>
               <div class="about-quote-sub pull-left center-mobile">
                 <h4>David Burns<span>Springfield, PA</span></h4>
@@ -168,7 +168,7 @@
             </article>
           </div><!-- row : ends -->
 
-          <div class="row add-top add-bottom">
+          <!--<div class="row add-top add-bottom">
             <article class="span9 col-white center-mobile">
               <h3>Testimonial Two</h3>
               <div class="about-quote">
@@ -181,7 +181,8 @@
             <article class="span3 image center-mobile">
               <img alt="eleg by designova" title="eleg" src="images/about/about03.png"/>
             </article>
-          </div><!-- row : ends -->
+          </div>-->
+          <!-- row : ends -->
 
         </section>
       </div>
@@ -333,14 +334,14 @@
             <div class="span4 sidebar page-sidebar"><!-- Begin sidebar column -->
             <h3 class="inner-sub-caps align-left">Additional Contact Information</h3>
             <address class="remove-bottom pad-bottom-half col-white">
-            <strong>Della Vecchio Construction</strong><br>
+            <strong>DellaVecchio Construction &amp; Restoration</strong><br>
 
             </address>
             <ul class="social-icons">
-              <li><span><img src="images/icons/s01.png" title="reason" alt="reason by designova"></span><a href="tel:4846147732">(484) 614-7732</a></li>
-              <li><span><img src="images/icons/s02.png" title="reason" alt="reason by designova"></span><a href="#">mail@dcfixme.com</a></li>
-              <li><span><img src="images/icons/s03.png" title="reason" alt="reason by designova"></span><a href="#">find us on facebok</a></li>
-              <li><span><img src="images/icons/s04.png" title="reason" alt="reason by designova"></span><a href="#">@dcfixme</a></li>
+              <li><span><img src="images/icons/s01.png" title="phone number" alt="(484) 614-7732"></span><a href="tel:4846147732">(484) 614-7732</a></li>
+              <li><span><img src="images/icons/s02.png" title="email" alt="mail@dcfixme.com"></span><a href="mail:mail@dcfixme.com">mail@dcfixme.com</a></li>
+              <li><span><img src="images/icons/s03.png" title="facebook" alt="facebook"></span><a href="#">find us on facebok</a></li>
+              <li><span><img src="images/icons/s04.png" title="twitter" alt="twitter"></span><a href="#">@dcfixme</a></li>
             </ul>
 
         </div>
@@ -385,7 +386,7 @@
 
 
   <footer class="mastfoot">
-      <p class="add-top-half">Copyright &copy; 2013 Della Vecchio Construction. All rights reserved.</p>
+      <p class="add-top-half">Copyright &copy; 2013 DellaVecchio Construction &amp; Restoration. All rights reserved.</p>
   </footer>
 
 
