Adding text for structural repair

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <article class="span4 image align-center col-white services-block center-mobile">
               <img alt="eleg by designova" title="eleg" src="images/services/f03.png"/>
               <h4>Structural Repair</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor lobortis molestie. Aenean justo enim, consequat quis malesuada consequat quis malesuada in, mollis volutpat justo. Suspendisse tincidunt quam vel diam eleifend vel tempus dolor pharetra.</p>
+              <p>We tackle the most challenging structural issues with innovative technology, field-tested experience, and problem-solving know-how. It is our goal to bring your property up to local health and safety standards.</p>
             </article>
 
           </div><!-- row : ends -->
