Fixing contact us subtext

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
           <div class="row add-top add-bottom">
             <article class="span12">
               <h1 class="main-heading col-white">Contact Us</h1>
-              <div><p class="sub-heading col-white"><span class="major">be in touch</span> we are glad to know from you</p></div>
+              <div><p class="sub-heading col-white">We'll take care of everything. Sit back and <span class="major">relax.</span></p></div>
             </article>
           </div><!-- row : ends -->
 
