adding transitions to slider

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 
             <div class="slider-wrapper theme-default">
             <div id="slider" class="nivoSlider center-mobile">
-                <img src="images/slider/roofer1.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" />
-                <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="" title="Re-Roof" />
+                <img src="images/slider/roofer1.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" data-transition="slideInLeft" />
+                <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="" title="Re-Roof" data-transition="slideInLeft" />
                 <!--<img src="images/slider/walle.jpg" data-thumb="images/walle.jpg" alt="Insured &amp; Licensed" data-transition="slideInLeft" />
                 <img src="images/slider/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />-->
             </div>
