updating contact info and social links

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </article>
             <article class="span8 col-white center-mobile">
               <h3>About DellaVecchio Construction &amp; Restoration</h3>
-              <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Delaware Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
+              <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Brandywine, Delaware and Lehigh Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
             </article>
           </div><!-- row : ends -->
 
@@ -338,10 +338,11 @@
 
             </address>
             <ul class="social-icons">
-              <li><span><img src="images/icons/s01.png" title="phone number" alt="(484) 614-7732"></span><a href="tel:4846147732">(484) 614-7732</a></li>
+              <li><span><img src="images/icons/s01.png" title="phone number" alt="1 (855) DCFIXME"></span><a href="tel:18553234963">Toll Free: 1(855) DCFIXME</a></li>
+              <li><span><img src="images/icons/s01.png" title="fax number" alt="(484) 427-3043"></span><a href="tel:484 4273043">Fax: (484) 427-3043</a></li>
               <li><span><img src="images/icons/s02.png" title="email" alt="mail@dcfixme.com"></span><a href="mail:mail@dcfixme.com">mail@dcfixme.com</a></li>
-              <li><span><img src="images/icons/s03.png" title="facebook" alt="facebook"></span><a href="#">find us on facebok</a></li>
-              <li><span><img src="images/icons/s04.png" title="twitter" alt="twitter"></span><a href="#">@dcfixme</a></li>
+              <li><span><img src="images/icons/s03.png" title="facebook" alt="facebook"></span><a href="https://www.facebook.com/dcfixme">find us on facebok</a></li>
+              <li><span><img src="images/icons/s04.png" title="twitter" alt="twitter"></span><a href="https://twitter.com/dcfixme">@dcfixme</a></li>
             </ul>
 
         </div>
@@ -365,8 +366,8 @@
 
           <div class="row add-top-half add-bottom">
             <article class="span12 align-center social-icon-pane">
-            <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a01.png"/></a>
-            <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a02.png"/></a>
+            <a href="https://www.facebook.com/dcfixme"><img alt="Facebook" title="DellaVecchio Construction &amp; Restoration" src="images/social/a01.png"/></a>
+            <a href="https://twitter.com/dcfixme"><img alt="Twitter" title="DellaVecchio Construction &amp; Restoration" src="images/social/a02.png"/></a>
             <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a03.png"/></a>
             <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a04.png"/></a>
             </article>
