fixing wording adding Google+ link

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="row add-top add-bottom">
             <article class="span12">
               <h1 class="main-heading col-white">Our Services</h1>
-              <div><p class="sub-heading col-white"><span class="major">Serving</span> the Delaware Valley since 1978.</p></div>
+              <div><p class="sub-heading col-white"><span class="major">Serving</span> the Brandywine, Delaware &amp; Lehigh Valley since 1978.</p></div>
             </article>
           </div><!-- row : ends -->
 
@@ -368,7 +368,7 @@
             <article class="span12 align-center social-icon-pane">
             <a href="https://www.facebook.com/dcfixme"><img alt="Facebook" title="DellaVecchio Construction &amp; Restoration" src="images/social/a01.png"/></a>
             <a href="https://twitter.com/dcfixme"><img alt="Twitter" title="DellaVecchio Construction &amp; Restoration" src="images/social/a02.png"/></a>
-            <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a03.png"/></a>
+            <a href="https://plus.google.com/b/106314731093902086588/106314731093902086588"><img alt="Google+" title="DellaVecchio Construction &amp; Restoration" src="images/social/a03.png"/></a>
             <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a04.png"/></a>
             </article>
           </div>
