hiding linkedin icon

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <a href="https://www.facebook.com/dcfixme"><img alt="Facebook" title="DellaVecchio Construction &amp; Restoration" src="images/social/a01.png"/></a>
             <a href="https://twitter.com/dcfixme"><img alt="Twitter" title="DellaVecchio Construction &amp; Restoration" src="images/social/a02.png"/></a>
             <a href="https://plus.google.com/b/106314731093902086588/106314731093902086588"><img alt="Google+" title="DellaVecchio Construction &amp; Restoration" src="images/social/a03.png"/></a>
-            <a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a04.png"/></a>
+            <!--<a href="#"><img alt="eleg by designova" title="eleg" src="images/social/a04.png"/></a>-->
             </article>
           </div>
 
