--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
             </article>
 
             <article class="span4 image align-center col-white services-block center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/services/f02.png"/>
+              <img alt="eleg by designova" title="eleg" src="images/services/f03.png"/>
               <h4>Residential &amp; Commercial</h4>
               <p>We are the roofing experts you can trust. When it comes to assisting you with your roofing needs, our professionals are experts at all flat and sloped roof designs, preventative maintenance and emergency repair for both residential and commercial roofing projects.</p>
             </article>
 
             <article class="span4 image align-center col-white services-block center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/services/f03.png"/>
-              <h4>Structural Repair</h4>
+              <img alt="eleg by designova" title="eleg" src="images/services/f02.png"/>
+              <h4>Free Inspection</h4>
               <p>We tackle the most challenging structural issues with innovative technology, field-tested experience, and problem-solving know-how. It is our goal to bring your property up to local health and safety standards.</p>
             </article>
 
