--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
             <article class="span4 image align-center col-white services-block center-mobile">
               <img alt="eleg by designova" title="eleg" src="images/services/f02.png"/>
-              <h4>Free Estimates</h4>
+              <h4>Free Inspections</h4>
               <p>We tackle the most challenging structural issues with innovative technology, field-tested experience, and problem-solving know-how. It is our goal to bring your property up to local health and safety standards.</p>
             </article>
 
