--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
             <article class="span4 image center-mobile">
               <img alt="Della Vecchio Roofing" title="eleg" src="images/about/about01.png" />
             </article>
-            <article class="span8 col-white center-mobile">
-              <h3>About DellaVecchio Construction &amp; Restoration</h3>
+            <article class="span8 col-white align-center center-mobile">
+              <h3>DellaVecchio Construction &amp; Restoration</h3>
+              <p class="sub-heading col-white">"when the water runs in, we run out."</p>
               <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Brandywine, Delaware and Lehigh Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
             </article>
           </div><!-- row : ends -->
