--- a/index.html
+++ b/index.html
@@ -138,10 +138,13 @@
             <article class="span4 image center-mobile">
               <img alt="Della Vecchio Roofing" title="eleg" src="images/about/about01.png" />
             </article>
-            <article class="span8 col-white align-center center-mobile">
-              <h3>DellaVecchio Construction &amp; Restoration</h3>
+            <article class="span8 col-white center-mobile">
+              <h3 class="align-center">DellaVecchio Construction &amp; Restoration</h3>
               <p class="sub-heading col-white">"when the water runs in, we run out."</p>
               <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Brandywine, Delaware and Lehigh Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
+              <p>License #'s PA093687, NJ13VH07321200<br />
+              GAF Certified Contractor - CE219821<br />
+              Owens Corning Preferred Contractor - 214870</p>
             </article>
           </div><!-- row : ends -->
 
@@ -230,7 +233,7 @@
             <article class="span4 image align-center col-white services-block center-mobile">
               <img alt="eleg by designova" title="eleg" src="images/services/f02.png"/>
               <h4>Free Inspections</h4>
-              <p>We tackle the most challenging structural issues with innovative technology, field-tested experience, and problem-solving know-how. It is our goal to bring your property up to local health and safety standards.</p>
+              <p>Our Inspectors are trained to locate, identify and assist with the repair of property damage caused by wind, hail, snow, ice and anything else mother nature can throw at us.</p>
             </article>
 
           </div><!-- row : ends -->
