changing serving wording and adding new roof image

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="row add-top add-bottom">
             <article class="span12">
               <h1 class="main-heading col-white">Our Services</h1>
-              <div><p class="sub-heading col-white"><span class="major">Serving</span> the Brandywine, Delaware &amp; Lehigh Valley since 1978.</p></div>
+              <div><p class="sub-heading col-white"><span class="major">Serving</span> The Greater Reading, Delaware &amp; Lehigh Valley since 1978.</p></div>
             </article>
           </div><!-- row : ends -->
 
@@ -256,7 +256,7 @@
 
             <div class="slider-wrapper theme-default">
             <div id="slider" class="nivoSlider center-mobile">
-                <img src="images/slider/roofer1.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" title="Family Owned &amp; Operated" data-transition="boxRandom" />
+                <img src="images/slider/fancyroof.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" title="Family Owned &amp; Operated" data-transition="boxRandom" />
                 <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="Re-Roof" title="Re-Roof" data-transition="boxRandom" />
                 <!--<img src="images/slider/walle.jpg" data-thumb="images/walle.jpg" alt="Insured &amp; Licensed" data-transition="slideInLeft" />
                 <img src="images/slider/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />-->
