changing serving wording in paragraph

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <article class="span8 col-white center-mobile">
               <h3 class="align-center">DellaVecchio Construction &amp; Restoration</h3>
               <p class="sub-heading col-white">"when the water runs in, we run out."</p>
-              <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving the Brandywine, Delaware and Lehigh Valley since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
+              <p>DellaVecchio Construction &amp; Restoration is a family owned and operated business that has been serving The Greater Reading Area, Delaware &amp; Lehigh Valleys Since 1978. We specialize in all roofing services for both residential and commercial properties. Everything from leak repair to complete re-roofing and gutter replacements. We pride ourselves on having clean and respectful crews that do top quality work. We have a licensed insurance adjuster on staff to handle your claim so you don't have to.</p>
               <p>License #'s PA093687, NJ13VH07321200<br />
               GAF Certified Contractor - CE219821<br />
               Owens Corning Preferred Contractor - 214870</p>
