--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 
             </address>
             <ul class="social-icons">
-              <li><span><img src="images/icons/s01.png" title="phone number" alt="1 (855) DCFIXME"></span><a href="tel:18553234963">Toll Free: 1(855) DCFIXME</a></li>
+              <li><span><img src="images/icons/s01.png" title="toll free phone number" alt="1 (855) DCFIXME"></span><a href="tel:18553234963">Toll Free: 1(855) DCFIXME</a></li>
+              <li><span><img src="images/icons/s01.png" title="local phone number" alt="(484) 614-7732"></span><a href="tel:14846147732">Local: (484) 614-7732</a></li>
               <li><span><img src="images/icons/s01.png" title="fax number" alt="(484) 427-3043"></span><a href="tel:484 4273043">Fax: (484) 427-3043</a></li>
               <li><span><img src="images/icons/s02.png" title="email" alt="mail@dcfixme.com"></span><a href="mail:mail@dcfixme.com">mail@dcfixme.com</a></li>
               <li><span><img src="images/icons/s03.png" title="facebook" alt="facebook"></span><a href="https://www.facebook.com/dcfixme">find us on facebok</a></li>
@@ -471,6 +472,16 @@
       // Target your .container, .wrapper, .post, etc.
       $("#fitvid").fitVids();
     });
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-51712648-1', 'dcfixme.com');
+    ga('send', 'pageview');
+
   </script>
 
 <!-- End Document
