improving image keywords

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Della Vecchio Construction - Wind and Storm Damage Experts</title>
+    <title>Della Vecchio Construction | Wind and Storm Damage Experts for The Greater Reading Area, Delaware &amp; Lehigh Valleys</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="DellaVecchio Construction &amp; Restoration">
+    <meta name="description" content="DellaVecchio Construction &amp; Restoration roofing experts Media Malvern Springfield Delware County slate shale tar ">
     <meta name="author" content="DellaVecchio Construction &amp; Restoration">
 
 
@@ -136,7 +136,7 @@
 
           <div class="row add-top add-bottom">
             <article class="span4 image center-mobile">
-              <img alt="Della Vecchio Roofing" title="eleg" src="images/about/about01.png" />
+              <img alt="Della Vecchio Roofing" title="Delaware Country Roofing Experts" src="images/about/about01.png" />
             </article>
             <article class="span8 col-white center-mobile">
               <h3 class="align-center">DellaVecchio Construction &amp; Restoration</h3>
@@ -159,7 +159,7 @@
 
           <div class="row add-top add-bottom">
             <article class="span3 image center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/about/about03.png"/>
+              <img alt="eleg by designova" title="Springfield Roof Shingles" src="images/about/about03.png"/>
             </article>
             <article class="span9 col-white center-mobile">
               <h3>Amazing Service and Worksmanship!</h3>
@@ -219,19 +219,19 @@
 
           <div class="row add-top-half add-bottom">
             <article class="span4 image align-center col-white services-block center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/services/f01.png"/>
+              <img alt="Expert Roofers" title="eleg" src="images/services/f01.png"/>
               <h4>Full Service Roofing</h4>
               <p>We install all types of roofing: shingle roofs, cedar roofs, metal roofs, slate and tile roofs, composite material roofs and flat roofs.</p>
             </article>
 
             <article class="span4 image align-center col-white services-block center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/services/f03.png"/>
+              <img alt="Delaware County Roofing Experts" title="eleg" src="images/services/f03.png"/>
               <h4>Residential &amp; Commercial</h4>
               <p>We are the roofing experts you can trust. When it comes to assisting you with your roofing needs, our professionals are experts at all flat and sloped roof designs, preventative maintenance and emergency repair for both residential and commercial roofing projects.</p>
             </article>
 
             <article class="span4 image align-center col-white services-block center-mobile">
-              <img alt="eleg by designova" title="eleg" src="images/services/f02.png"/>
+              <img alt="eleg by designova" title="Malvern Roofing Experts" src="images/services/f02.png"/>
               <h4>Free Inspections</h4>
               <p>Our Inspectors are trained to locate, identify and assist with the repair of property damage caused by wind, hail, snow, ice and anything else mother nature can throw at us.</p>
             </article>
@@ -256,8 +256,8 @@
 
             <div class="slider-wrapper theme-default">
             <div id="slider" class="nivoSlider center-mobile">
-                <img src="images/slider/fancyroof.jpg" data-thumb="images/toystory.jpg" alt="Family Owned &amp; Operated" title="Family Owned &amp; Operated" data-transition="boxRandom" />
-                <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="Re-Roof" title="Re-Roof" data-transition="boxRandom" />
+                <img src="images/slider/fancyroof.jpg" data-thumb="images/toystory.jpg" alt="Shale Shingle Roof" title="Family Owned &amp; Operated" data-transition="boxRandom" />
+                <img src="images/slider/roof17.jpg" data-thumb="images/up.jpg" alt="Re-Roof" title="Springfield Re-Roofing Experts" data-transition="boxRandom" />
                 <!--<img src="images/slider/walle.jpg" data-thumb="images/walle.jpg" alt="Insured &amp; Licensed" data-transition="slideInLeft" />
                 <img src="images/slider/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />-->
             </div>
