--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <article class="row">
 
             <div id="fitvid" class="span12 align-center add-top">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/GmrWUebYYEk?hd=1&showinfo=0&rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/GmrWUebYYEk?hd=1&showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </article>
